--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,6 +1,7 @@
 //1. Configurations and helpers
 @import 'abstracts/variables';
 @import 'abstracts/mixins';
+@import 'abstracts/extends';
 
 // 2. Base
 @import 'base/base';
