--- a/src/assets/styles/layout/_LandingLayout.scss
+++ b/src/assets/styles/layout/_LandingLayout.scss
@@ -1,5 +1,33 @@
 .LandingLayout {
 
-    background: red;
+    @extend %body-width-and-padding;
+    display: flex;
+    min-height: 100vh;
+    
+    &-lendsqr {
+
+        display: block;
+        margin-bottom: 139px;
+
+    }
+
+    &-left,
+    &-right {
+
+        @extend %body-padding-vertical;
+        width: 50%;
+
+        img {
+
+            max-width: 100%;
+
+        }
+
+    }
+
+    &-right {
+
+        box-shadow: 0px 15px 90px rgba(0, 0, 0, 0.03);
+    }
 
 }
