--- a/src/assets/styles/abstracts/_extends.scss
+++ b/src/assets/styles/abstracts/_extends.scss
@@ -48,3 +48,25 @@
   // margin: auto;
   padding: 97px 0;
 }
+
+%body-padding-horizontal {
+
+  @media only screen and (max-width: 1400px) {
+    padding-right: 80px;
+    padding-left: 80px;
+  }
+
+  @include media-query(mobile) {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  @include media-query('small-tablet') {
+    padding-right: 32px;
+    padding-left: 32px;
+  }
+
+  padding-right: 100px;
+  padding-left: 100px;
+
+}
