--- a/src/assets/styles/layout/_LandingLayout.scss
+++ b/src/assets/styles/layout/_LandingLayout.scss
@@ -27,7 +27,9 @@
 
     &-right {
 
+        @extend %body-padding-horizontal;
         box-shadow: 0px 15px 90px rgba(0, 0, 0, 0.03);
+
     }
 
 }
