--- a/src/assets/styles/abstracts/_extends.scss
+++ b/src/assets/styles/abstracts/_extends.scss
@@ -70,3 +70,11 @@
   padding-left: 100px;
 
 }
+
+%form-placeholder {
+  @include font-size(small);
+  width: 100%;
+  color: transparentize( color(secondary) , 0.4);
+  font-family: $aux-font;
+  font-weight: 300;
+}
