add button component

--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -6,7 +6,7 @@ $colors: (
   primary: #213F7D,
   secondary: #545F7D,
   tertiary: #39CDCC,
-  clearWhite: #fff,
+  clear-white: #fff,
   error-item: #f36b7f,
   input-border: rgba(84, 95, 125, 0.15)
 );
