--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -13,6 +13,7 @@
 @import 'transitions/fadeIn';
 
 //5. Components
+@import "components/button";
 @import "components/form-field/index";
 
 //6. Layout
