Main-layout set - up and Top Bar

--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -8,7 +8,8 @@ $colors: (
   tertiary: #39CDCC,
   clear-white: #fff,
   error-item: #f36b7f,
-  input-border: rgba(84, 95, 125, 0.15)
+  input-border: rgba(84, 95, 125, 0.15),
+  background: #FBFBFB
 );
 
 $card-shadow: 3px 0px 20px rgba(0, 0, 0, 0.04);
