--- a/src/assets/styles/components/form-field/_index.scss
+++ b/src/assets/styles/components/form-field/_index.scss
@@ -27,7 +27,6 @@
     background: color(clear-white);
     color: transparentize( color(secondary) , 0.2);
     line-height: 1.8;
-    letter-spacing: 1.1px;
     font-family: $aux-font;
     transition: color 0.2s, background 0.2s;
     transition-timing-function: ease;
@@ -84,12 +83,13 @@
     margin-top: 0;
     margin-bottom: 0;
     border-radius: 8px;
-    border: 1px solid transparentize(color(primary), 0.8);
+    border: 1px solid color(tertiary);
     background: white;
+    overflow: hidden;
 
     input {
       border: 0;
-      padding: 8px 20px;
+      padding: 7px 20px;
       height: unset;
       background: transparent;
     }
@@ -98,9 +98,7 @@
       
       @include media-query(non-mobile) {
 
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-        padding: 9px 21px !important;
+        padding: 5px 21px !important;
 
       }
 
@@ -108,6 +106,16 @@
         margin: 20px auto;
       }
 
+      &:hover {
+
+        transform: none;
+        background: darken(color(tertiary), 5);
+
+      }
+
+      border-radius: 0;
+      border: 0;
+      background: color(tertiary);
       max-width: max-content;
     }
 
