--- a/src/assets/styles/layout/_mainLayout.scss
+++ b/src/assets/styles/layout/_mainLayout.scss
@@ -7,9 +7,11 @@
   min-height: 100vh;
 
   &-sideNav {
+
     @include media-query('non-pc') {
       display: none;
     }
+
     padding: 20px 0;
     max-width: 100%;
     height: 100%;
@@ -22,19 +24,19 @@
     }
 
     &-item {
-      margin-bottom: 15px;
-      padding: 15px 15px 15px 26px;
+      padding: 0 15px 0 26px;
 
       &.active {
         background: transparentize(color(primary), 0.8);
       }
+
     }
 
     &-item a {
       display: flex;
       align-items: center;
       cursor: pointer;
-      color: transparentize(color(secondary), 0.5);
+      color: primary;
 
       div {
         display: flex;
@@ -42,19 +44,32 @@
         margin-right: 24px;
       }
 
-      svg,
-      path {
-        fill: color(secondary);
-        fill-opacity: 0.5;
+    }
+
+    &-item-block-title {
+
+      @include font-size(x-small);
+      margin: 40px 0 10px;
+
+    }
+
+    &-item-block-links {
+
+      a {
+
+        opacity: 0.4;
+        padding: 10px 0;
+
       }
 
-      &.active,
-      &.active path {
-        fill: color(primary);
-        color: color(primary);
-        fill-opacity: 1;
+      a.active {
+
+        opacity: 1;
+
       }
+
     }
+
   }
 
   &-topBar {
@@ -70,12 +85,13 @@
 
     &-company {
 
+      display: flex;
+      align-items: center;
       padding-left: 0;
       width: 223px;
 
       &-box {
         display: flex;
-        padding-top: 5px;
   
         img {
   
