--- a/src/assets/styles/layout/_mainLayout.scss
+++ b/src/assets/styles/layout/_mainLayout.scss
@@ -73,6 +73,13 @@
   }
 
   &-topBar {
+
+    @include media-query(pc-low-resolution) {
+
+      padding-right: 30px;
+
+    }
+
     z-index: 1;
     position: absolute;
     top: 0;
@@ -81,6 +88,7 @@
     box-shadow: 3px 0px 20px rgba(0, 0, 0, 0.04);
     background: color(clear-white);
     padding: 26px 30px;
+    padding-right: 60px;
     width: 100%;
 
     &-company {
@@ -246,9 +254,12 @@
       padding: 123px 24px 32px;
     }
 
+    @include media-query(pc-low-resolution) {
+      padding: 72px 30px;
+    }
+
     margin-top: 73px;
-    padding: 72px 31px;
-    padding-left: 79px;
+    padding: 72px 60px;
     min-height: calc(100vh - 73px);
     max-height: calc(100vh - 73px);
     overflow-y: scroll;
@@ -256,6 +267,14 @@
   }
 
   &-legend {
-    margin-bottom: 24px;
+    margin-bottom: 40px;
+
+    h2 {
+
+      @include font-size(n-large);
+      color: color(primary);
+
+    }
+
   }
 }
