Created filter and select-option components for table data

--- a/src/assets/styles/components/_summary-card.scss
+++ b/src/assets/styles/components/_summary-card.scss
@@ -32,7 +32,7 @@
       max-width: 60px;
       min-height: 60px;
       max-height: 60px;
-      background: color(card-bg);
+      background: transparentize(color(card-bg), 0.9);
     }
 
     h2 {
