--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -15,7 +15,10 @@
 
 //5. Components
 @import "components/button";
+@import "components/component-filter";
+@import "components/date-filter";
 @import "components/form-field/index";
+@import "components/form-field/select";
 @import "components/summary-card";
 @import "components/table";
 
