--- a/src/assets/styles/components/_button.scss
+++ b/src/assets/styles/components/_button.scss
@@ -23,6 +23,7 @@
   transition-timing-function: ease;
 
   &.no-bg {
+    border: 1px solid color(primary);
     background: transparent;
     color: color(primary);
 
