--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -13,9 +13,13 @@
 @import 'transitions/fadeIn';
 @import 'transitions/content-loader';
 
+//6. Vendors
+@import "vendors/lite-picker";
+
 //5. Components
 @import "components/button";
 @import "components/component-filter";
+@import "components/form-field/date";
 @import "components/date-filter";
 @import "components/form-field/index";
 @import "components/form-field/select";
