add table option component

--- a/src/assets/styles/components/_table.scss
+++ b/src/assets/styles/components/_table.scss
@@ -95,6 +95,20 @@
     }
   }
 
+  &-option-item {
+
+    display: flex;
+    align-items: center;
+
+    span {
+
+      display: block;
+      margin-right: 13px;
+
+    }
+
+  }
+
   &-td-filter {
 
     display: flex;
