Pagination component set-up

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -25,6 +25,7 @@
 @import "components/form-field/select";
 @import "components/summary-card";
 @import "components/table";
+@import "components/table/pagination";
 
 //6. Layout
 @import "layout/LandingLayout";
