specific customer page set-up

--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -21,6 +21,7 @@ $card-shadow: 3px 0px 20px rgba(0, 0, 0, 0.04);
 
 $main-font: 'work-sans', sans-serif;
 $aux-font: 'avenir-next', sans-serif;
+$alt-font: 'avenir-next', sans-serif;
 
 $default-font-size: 14px;
 
