--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -8,11 +8,13 @@
   box-sizing: inherit;
   margin: 0;
   padding: 0;
+  font-family: $main-font;
 }
 
 html {
   font-size: 62.5%;
   min-height: 100vh;
+  font-family: $main-font;
 }
 
 body {
