--- a/src/assets/styles/components/_summary-card.scss
+++ b/src/assets/styles/components/_summary-card.scss
@@ -6,14 +6,14 @@
     padding: 33px 15px 20px;
   }
   
+  display: flex;
+  flex-direction: column;
   border-radius: 4px;
   box-shadow: $card-shadow;
   padding: 20px 20px 30px;
+  background: color(clear-white);
 
   &-small {
-    display: flex;
-    flex-direction: column;
-    background: color(clear-white);
 
     div {
       @extend .strickFadeIn;
@@ -53,6 +53,105 @@
       margin-bottom: 12px;
       color: color(secondary);
     }
+  }
+
+  &-big {
+
+    padding: 30px 30px 0;
+    width: 100%;
+
+    &-top {
+
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: max-content;
+      min-width: 600px;
+      padding-bottom: 30px;
+
+      &-content {
+
+        display: flex;
+        justify-content: space-between;
+
+      }
+
+      h1,
+      p {
+
+        color: color(primary);
+
+      }
+
+      h1 {
+
+        @include font-size(m-large);
+
+      }
+
+      p {
+
+        @include font-size(small);
+
+      }
+
+    }
+
+    .view-formatter:nth-child(2) {
+
+      border-right: 1px solid transparentize(color(secondary), 0.8);
+      padding-right: 30px;
+
+    }
+
+    .view-formatter:nth-child(4) {
+
+      border-left: 1px solid transparentize(color(secondary), 0.8);
+      padding-left: 30px;
+
+    }
+
+    .view-formatter-label {
+
+      font-weight: 300;
+
+    }
+
+    .summary-card-small-icon {
+
+      margin-right: 20px;
+      margin-bottom: 0;
+      width: 100px;
+      min-width: 100px;
+      height: 100px;
+      max-height: 100px;
+
+    }
+
+    .customer-user-tier {
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 0 30px;
+
+      p {
+
+        @include font-size(regular);
+        margin: auto;
+
+      }
+
+      div,
+      span {
+
+        display: flex;
+        margin: auto;
+
+      }
+
+    }
+
   }
 
 }
