--- a/src/assets/styles/components/_summary-card.scss
+++ b/src/assets/styles/components/_summary-card.scss
@@ -64,7 +64,6 @@
 
       display: flex;
       align-items: center;
-      justify-content: space-between;
       width: max-content;
       min-width: 600px;
       padding-bottom: 30px;
@@ -97,20 +96,6 @@
 
     }
 
-    .view-formatter:nth-child(2) {
-
-      border-right: 1px solid transparentize(color(secondary), 0.8);
-      padding-right: 30px;
-
-    }
-
-    .view-formatter:nth-child(4) {
-
-      border-left: 1px solid transparentize(color(secondary), 0.8);
-      padding-left: 30px;
-
-    }
-
     .view-formatter-label {
 
       font-weight: 300;
@@ -133,6 +118,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      margin: 0 30px;
+      border-right: 1px solid transparentize(color(secondary), 0.8);
+      border-left: 1px solid transparentize(color(secondary), 0.8);
       padding: 0 30px;
 
       p {
