--- a/src/assets/styles/components/table/_index.scss
+++ b/src/assets/styles/components/table/_index.scss
@@ -57,6 +57,7 @@
 
     td {
       @include font-size(small);
+      border-bottom: 1px solid transparentize(color(primary),0.9);
       padding: 20px 0;
       font-weight: 400;
       color: color(secondary);
