--- a/src/assets/styles/pages/customers/index.scss
+++ b/src/assets/styles/pages/customers/index.scss
@@ -2,10 +2,27 @@
 
     &-summary {
 
+        @include media-query(mobile) {
+
+            margin-left: -15px;
+            margin-right: -15px;
+            padding-left: 20px;
+            text-align: center;
+            overflow-x: scroll;
+
+        }
+
         display: flex;
         margin-bottom: 40px;
 
         .summary-card-small {
+
+            @include media-query(mobile) {
+
+                margin-right: 20px;
+                width: 90%;
+    
+            }
 
             margin: 0 auto;
             width: 23%;
@@ -41,6 +58,18 @@
 
         &-block-entries {
 
+            @include media-query(small-tablet) {
+
+                justify-content: space-between;
+
+            }
+
+            @include media-query(mobile) {
+
+                justify-content: space-between;
+
+            }
+
             display: flex;
             flex-wrap: wrap;
             margin-bottom: 30px;
@@ -50,6 +79,24 @@
         }
 
         &-block-entries .view-formatter {
+
+            @include media-query(pc-low-resolution) {
+
+                min-width: 25%;
+
+            }
+
+            @include media-query(tablet) {
+
+                min-width: 30%;
+
+            }
+
+            @include media-query(mobile) {
+
+                min-width: 40%;
+
+            }
 
             display: flex;
             flex-direction: column-reverse;
