--- a/public/fonts/avenir-next/index.css
+++ b/public/fonts/avenir-next/index.css
@@ -3,7 +3,7 @@
   font-family: 'avenir-next';
   font-weight: 300;
   font-style: normal;
-  src: url('./AvenirNextLTPro-It.otf');
+  src: url('./AvenirNextLTPro-Regular.otf');
 }
 
 @font-face {
