--- a/src/assets/styles/components/table/_pagination.scss
+++ b/src/assets/styles/components/table/_pagination.scss
@@ -10,6 +10,13 @@
   margin-top: 20px;
 
   &-flex {
+
+    @include media-query(mobile) {
+
+      flex-direction: column;
+
+    }
+
     display: flex;
     justify-content: space-between;
   }
