added back button and customer actions

--- a/src/assets/styles/layout/_mainLayout.scss
+++ b/src/assets/styles/layout/_mainLayout.scss
@@ -287,6 +287,16 @@
   }
 
   &-legend {
+
+    @include media-query(mobile) {
+
+      flex-direction: column;
+
+    }
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-bottom: 40px;
 
     h2 {
