--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,6 +19,7 @@
 //5. Components
 @import "components/button";
 @import "components/component-filter";
+@import "components/component-header";
 @import "components/form-field/date";
 @import "components/date-filter";
 @import "components/form-field/index";
