--- a/src/assets/styles/pages/customers/index.scss
+++ b/src/assets/styles/pages/customers/index.scss
@@ -43,6 +43,13 @@
 
     }
 
+    &-specific-summary {
+
+        display: flex;
+        margin-bottom: 40px;
+
+    }
+
     &-details {
 
         border: 1px solid rgba(33, 63, 125, 0.06);
