feedback for  empty fetch

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import "components/button";
 @import "components/component-filter";
 @import "components/component-header";
+@import "components/empty-history";
 @import "components/form-field/date";
 @import "components/date-filter";
 @import "components/form-field/index";
