removed scrollbar visibility on summary component

--- a/src/assets/styles/pages/customers/index.scss
+++ b/src/assets/styles/pages/customers/index.scss
@@ -14,6 +14,12 @@
 
         display: flex;
         margin-bottom: 40px;
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
 
         .summary-card-small {
 
